CHANGES
*******

0.8 (unreleased)
================

- Add Python 3.5 and make it the default test environment.

- Clean up meta data.

- Fix `#6`_: ``userid`` not taken properly. 

.. _#6: https://github.com/morepath/more.transaction/issues/6


0.7 (2016-07-18)
================

- Use a new ``request.reset`` API introduced by Morepath 0.15 to reset
  the request so that a transaction can be properly
  retried. Previously ``more.transaction`` was using internal Morepath
  APIs to reset the request, which failed after a change in Morepath
  0.15.

- Discovered a bug: request resetting wasn't working properly with
  mounted applications. This is fixed in Morepath's new
  ``request.reset`` method, which we now use.

- Replaced custom exception re-raise machinery with a ``raise``
  statement with no arguments.  That was legacy code from
  ``pyramid_tm`` when they were using a context manager instead of a
  ``try...except`` statement.

  See https://github.com/morepath/more.transaction/issues/7

- Update test suite to take advantage of Morepath 0.15.

- Remove Python 2.5 syntax.

0.6 (2016-04-06)
================

- Adds compatibility with Morepath 0.13.

0.5 (2015-08-17)
================

- Fixes transaction retries not working for paths with more than one variable.

  This bug had no effect on applications using the default more.transaction
  settings. The bug only concerned applications using an ``attempts`` setting
  greater than 1.

  See https://github.com/morepath/more.transaction/issues/3

0.4 (2015-01-06)
================

- Rename ``transaction_app`` to ``TransactionApp`` to be consistent
  with modern class naming in Morepath. Still provide
  ``transaction_app`` for backwards compatibility.

- Modify ``setup.py`` to use ``io.open`` instead of ``open`` to
  include the README and the CHANGELOG and hardcode UTF-8 so it works
  on all versions of Python with all default encodings.

0.3 (2014-11-03)
================

- Compatibility fixes for Morepath 0.7.
